tests/replace/test_replace.fail.rs
use lit_mod::replace;

fn main() {
    replace!("Hello, world!", "world", "Rust", "Noooooo");
}